TheKabal (07 October 2012)
--------------------------------------
Planet_report_ce redone, move all language string variables out to language files, and update foreign languages to match. Also use DB bind variables where possible. 
Changed the variable in the url for report type to be all lower case.

TheMightyDude (05 October 2012)
--------------------------------------
Fixed Notice: Trying to get property of non-object in main.php on line 43
-> Seems that SelectLimit doesn't like to have ; in the SQL Query even though it should.
Fixed FUNCTION blacknova_svn_db.SUM does not exist. Check the 'Function Name Parsing and Resolution' section in the Reference Manual.
-> Seems that SQL Function SUM hates to have Spaces after it.

TheMightyDude (03 October 2012)
--------------------------------------
Fixed PHP Parse error: syntax error, unexpected ';' in planet.php on line 361
Fixed PHP Notice: Undefined index: email in login2.php on line 25
Fixed PHP Notice: Undefined index: ip_address in login2.php on line 70

TheMightyDude (01 October 2012)
--------------------------------------
Fixed Notice: Undefined index: l_login_closed_message in includes/check_login.php on line 133 
Fixed Notice: Undefined index: l_login_closed_message in includes/check_login.php on line 135
Fixed bug in includes/create_schema.php where it was failing to create the news table.
Fixed the News Ticker so it now works, my bad, I left some debug code in there.
Fixed missing language variable "l_tdr_edit" should be using "l_edit" in traderoute.php.
Fixed ERROR: Column 'subject' cannot be null in mailto.php may need to be added into the language files.

TheMightyDude (30 September 2012)
--------------------------------------
Fixed Warning: include(./calc_ownership.php): failed to open stream: No such file or directory in includes/db_kill_player.php on line 68 
Fixed Warning: include(): Failed opening './calc_ownership.php' for inclusion (include_path='.') in includes/db_kill_player.php on line 68 